--- a/src/components/ProductItem/ProductItem.module.scss
+++ b/src/components/ProductItem/ProductItem.module.scss
@@ -1,10 +1,8 @@
 @import 'styles/global';
 
-.grid-img {
+.pitem-img {
   width: 300px;
-  // height: 260px;
   background: white;
-  margin-bottom: 10px;
   animation: img-loading 0.3s;
 }
 
@@ -14,21 +12,9 @@
   }
 }
 
-.swiper-container {
-  display: grid;
-  margin-bottom: 20px;
-}
-
-.product-swipper {
-  width: 100%;
-  height: 100%;
-  --swiper-navigation-color: #595959;
-  --swiper-pagination-color: #595959;
-}
-
-.grid-item {
+.pitem-item {
   display: flex;
-  padding: 20px 0;
+  margin: 20px 0;
   position: relative;
   align-items: center;
   align-content: center;
@@ -36,14 +22,10 @@
   border-radius: $border-radius;
   transition: all 0.3s ease-in-out;
   border: 1px solid $nav-border-color;
-  &:hover {
-    @include up-animation;
-    @include main-box-shadow;
-  }
 }
 
-.grid-item-title {
-  margin: 20px 0;
+.pitem-item-title {
+  margin-bottom: 20px;
   max-width: 400px;
   overflow: hidden;
   font-weight: 500;
@@ -75,11 +57,13 @@
     }
   }
 }
+
 .tag-container {
   margin: 10px 0;
   padding: 10px;
   .tag-name {
     margin: 4px;
+    font-weight: 500;
     padding: 4px 8px;
     font-size: 0.875rem;
     border-radius: 20px;
@@ -157,6 +141,28 @@
   }
 }
 
+.specs-table {
+  margin-top: 20px;
+  h4 {
+    margin-bottom: 10px;
+  }
+  table {
+    width: 100%;
+    font-size: 12px;
+    border-collapse: collapse;
+  }
+
+  td,
+  th {
+    padding: 10px;
+    border: 1px solid $nav-border-color;
+  }
+
+  tr:nth-child(even) {
+    background: lighten($nav-border-color, 2%);
+  }
+}
+
 @keyframes onShowDescription {
   0% {
     transform: translateY(0);
@@ -170,7 +176,7 @@
 }
 
 @media (max-width: 768px) {
-  .grid-item-title {
+  .pitem-item-title {
     max-width: 280px;
   }
 
