--- a/src/pages/Product/Product.module.scss
+++ b/src/pages/Product/Product.module.scss
@@ -9,6 +9,7 @@
   .item-container {
     width: 50%;
     margin: 0 auto;
+    margin-top: 20px;
   }
 }
 
